<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Checklist</string>
    <string name="title_section1">Checklist 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_item">Add Item</string>
    <string name="save">Save to Phone</string>
    <string name="add_checklist">Add Checklist</string>
    <string name="delete_item">Delete Items</string>
    <string name="delete_checklist">Delete Checklist</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="sync">Sync</string>
    <string name="remind">Remind</string>

</resources>
