<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/remind" android:title="@string/remind"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/add_item" android:title="@string/add_item"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/add_checklist" android:title="@string/add_checklist"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/delete_item" android:title="@string/delete_item"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/delete_checklist" android:title="@string/delete_checklist"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/save" android:title="@string/save"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/sync" android:title="@string/sync"
        android:showAsAction="withText|ifRoom" />
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
        <!--android:orderInCategory="100" android:showAsAction="never" />-->
</menu>
